# pixed

./: .gitignore  Makefile
0docker/: .env  buildNstart.sh  docker-compose.yml  start.sh
0docker/app/: Dockerfile-cons  Dockerfile-strm  Dockerfile-ts
0docker/kafka/: createTopic.sh
1ui/: package.json  runProdBuild.sh
1ui/public/: index.html
1ui/src/: index.js
2backend/: go.work  go.work.sum  runSvc.sh
2backend/impl/: go.mod  go.sum  ts_impl.go
2backend/mware/: config.go  dbs.go  go.mod  go.sum  kafka.go
2backend/test/: runBench.sh  runGowrk.sh  ts_test.go
3ml/: requirements.txt
docker/: .env  buildNstart.sh  docker-compose.yml
docker/app/: Dockerfile-cons  Dockerfile-gsvc  Dockerfile-rsvc  Dockerfile-strm  Dockerfile-ts  Dockerfile-ws
docker/grafana/: datasource.yaml
docker/hbase/: download.sh
docker/prometheus/: prometheus.yml
gsvc/: Makefile  go.mod  go.sum  notes.md
gsvc/handler/: register.go
gsvc/mware/: logging.go  metrics.go  response.go  tracing.go
gsvc/server/: main.go
gsvc/test/: ex_test.go  exch_test.go  ingest_test.go  main.go  runBench.sh  runCurl.sh  runGowrk.sh  ts_test.go
gsvc/yaml/: agentmanagement-v3-4-0.yaml  assetmanagement-v3-18-3.yaml  iottimeseries-v3-7-0.yaml  mindconnect-v3-5-0.yaml
insights/: requirements.txt
insights/src/: pre_21.py  pre_21_dm.py  test_pd_np.py
microsvc/: go.mod  go.sum  runSvc.sh
rsvc/: Cargo.toml
rsvc/src/: main.rs
rsvc/src/handler/: exchange.rs  mod.rs
rsvc/src/model/: agent.rs  mod.rs
rsvc/src/util/: conf.rs  kafka.rs  kv.rs  mod.rs
ui/: package.json
(+628 files in other folders)
