[package]
name = "rsvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.25", features = ["cmake-build"] }
env_logger = "0.9.0"

axum = { version = "0.5.13", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.4", features = ["trace", "fs"] }
chrono = "0.4.22"
hyper = "0.14"

